# integrity-sdk

./: .gitignore  README.md  integrity_developer_notebook.ipynb  pyproject.toml  test_claim.py
.integrity/did/: document.json  private_key.pem
.integrity/did/agent_live_validation_99/: document.json  private_key.pem
.integrity/did/agent_offline_test/: document.json  private_key.pem
.integrity/did/agent_openai_test/: document.json  private_key.pem
docs/: SDK_INTERNALS.md
integrity_sdk/: __init__.py  batcher.py  bundler.py  client.py  did.py  extractor.py  hardware.py  mcp_server.py  prover.py  universal.py
integrity_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
integrity_sdk/integrations/: __init__.py  a2a_negotiator.py  compliance.py  hermes_plugin.py  langchain.py  langchain_callback.py  openai_integrity.py  openclaw_hook.py  world_data_fetcher.py
integrity_sdk/security/: attestation.py  vault.py
integrity_sdk/telemetry/: analyzer.py  conventions.py  core.py  host.py
scripts/: simulate_swarm.py
tests/: composite_signals_validation.py  concurrency_validation.py  gpu_hours_validation.py  hermes_validation.py  hitl_validation.py  live_oracle_ingestion.py  live_oracle_validation.py  model_switch_validation.py  real_convo_validation.py  real_inference_hermes.py  red_team_simulation.py  test_compliance.py  test_ownership_claim.py  virtualization_validation.py  wallet_validation.py
wiki/: Architecture.md  Developer-Guide.md  Home.md  Local-Metrology.md  MCP-Integration.md  Mindmap.md
