[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrity_sdk"
version = "0.2.0"
description = "Xibalba Integrity Protocol SDK: High-Fidelity Measurement Apparatus"
authors = [
    {name = "Xibalba"}
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "psutil>=5.9.0",
]
