[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integrity_sdk"
version = "2.2.0"
description = "Xibalba Integrity Protocol SDK: The Institutional Trust Layer for AI Agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Xibalba Solutions", email = "labs@xibalba.solutions"}
]
keywords = ["ai", "agents", "reputation", "web3", "integrity", "provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "psutil>=5.9.0",
    "keyring>=24.0.0",
    "boto3>=1.34.0",
    "eth-account>=0.11.0",
]

[project.urls]
Homepage = "https://xibalba.solutions"
Documentation = "https://docs.xibalba.solutions"
Repository = "https://github.com/xibalba-solutions/integrity-protocol"

[tool.setuptools]
packages = ["integrity_sdk"]

